# env-manager

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
homebrew/: env-manager.rb
src/: App.tsx  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  config.rs  lib.rs  main.rs  parser.rs  port_scanner.rs  scanner.rs  service_map.rs  snapshot.rs  types.rs  url_detector.rs  writer.rs
src/components/: DiffView.tsx  EnvEditor.tsx  ProjectList.tsx  ServiceStatus.tsx  SnapshotPanel.tsx  ToastContainer.tsx  UrlToggle.tsx
src/hooks/: useDefaultBaseline.ts  useEnvEntries.ts  usePorts.ts  useProjects.ts  useServiceMap.ts  useSnapshots.ts  useTheme.ts
src/lib/: tauri.ts
src/test/: setup.ts  store.test.ts
