[package]
name = "env-manager"
version = "1.2.0"
description = "A native macOS .env file manager"
authors = ["you"]
edition = "2021"

[lib]
name = "env_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
